<resources>
    <string name="app_name">TerraVive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="continue_as_guest_instead">Continue as Guest Instead</string>
    <string name="log_in_here">LOG IN HERE</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register">REGISTER</string>
    <string name="default_web_client_id">1035898264988-1i6t7qie7fq2bneseiifjt6q2i4ted2v.apps.googleusercontent.com</string>
    <string name="create_your_account_enter_your_email_and_create_your_password">Create your account\nEnter your email and create your password</string>
    <string name="facebook_app_id">1434131051080341</string>
    <string name="fb_login_protocol_scheme">fb1434131051080341</string>
    <string name="facebook_client_token">7f3dbc0cab13717f9c2c899ef980f35a</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_to_terravive_a_platform_created_to_empower_individuals_foundations_and_organizations_to_support_and_promote_environmental_initiatives_by_creating_an_account_you_agree_to_the_following_terms_and_conditions_please_review_them_carefully_1_acceptance_of_termsby_registering_for_and_using_an_account_on_terravive_you_agree_to_comply_with_these_terms_and_conditions_as_well_as_our_privacy_policy_if_you_do_not_agree_with_any_part_of_these_terms_please_do_not_use_the_platform_2_eligibilityto_create_an_account_on_terravive_you_must_be_at_least_18_years_old_or_the_legal_age_of_majority_in_your_jurisdiction_provide_truthful_current_and_complete_information_during_registration_not_create_an_account_on_behalf_of_another_person_or_organization_without_authorization_verified_foundation_and_charity_accounts_must_be_registered_with_the_appropriate_legal_authorities_in_their_region_3_user_responsibilitiesas_a_terravive_user_you_are_responsible_for_keeping_your_login_credentials_secure_and_confidential_all_activity_conducted_through_your_account_ensuring_your_posts_campaigns_and_interactions_align_with_terravive_s_community_standards_and_environmental_mission_misuse_or_unauthorized_access_must_be_reported_to_terravive_immediately_4_fundraising_and_donation_featuresterravive_allows_users_to_launch_and_manage_fundraisers_for_environmental_causes_collect_and_receive_donations_via_integrations_with_trusted_third_party_financial_apps_promote_campaigns_to_raise_awareness_and_support_for_green_projects_important_all_fundraisers_undergo_verification_fraudulent_or_deceptive_fundraising_activities_are_strictly_prohibited_and_will_result_in_account_suspension_or_legal_action_5_use_of_donationsusers_and_organizations_receiving_funds_agree_to_use_all_donations_exclusively_for_the_purposes_stated_in_their_fundraising_campaign_maintain_transparency_and_provide_updates_or_documentation_upon_request_avoid_using_any_portion_of_the_funds_for_unauthorized_or_personal_purposes_6_community_social_featuresterravive_includes_a_social_media_like_space_where_users_can_share_updates_photos_stories_and_achievements_comment_on_and_support_environmental_initiatives_connect_with_other_users_groups_and_eco_conscious_services_prohibited_content_includes_harassment_hate_speech_or_threats_inappropriate_or_misleading_content_advertisements_unrelated_to_environmental_causes_terravive_reserves_the_right_to_remove_content_and_restrict_user_access_if_community_guidelines_are_violated_7_account_suspension_and_terminationterravive_may_suspend_or_terminate_an_account_if_these_terms_are_violated_fraudulent_or_deceptive_practices_are_discovered_donations_are_misused_or_not_accounted_for_8_third_party_servicesterravive_integrates_with_external_financial_services_for_donation_collection_by_using_these_features_you_acknowledge_and_accept_the_terms_and_privacy_policies_of_those_third_party_providers_terravive_is_not_liable_for_issues_arising_from_their_use_9_limitation_of_liabilityterravive_is_not_liable_for_disputes_between_donors_and_fundraisers_mismanagement_of_donations_outside_our_platform_indirect_or_consequential_damages_resulting_from_platform_use_10_modifications_to_termsthese_terms_may_be_updated_from_time_to_time_continued_use_of_terravive_after_changes_indicates_your_acceptance_of_the_new_terms_11_contact_informationfor_questions_support_or_concerns_please_reach_out_to_us_at_support_terravive_org">
<![CDATA[ Welcome to TerraVive A platform created to empower individuals, foundations, and organizations to support and promote environmental initiatives. By creating an account, you agree to the following Terms and Conditions. Please review them carefully.1. Acceptance of TermsBy registering for and using an account on TerraVive, you agree to comply with these Terms and Conditions, as well as our Privacy Policy. If you do not agree with any part of these terms, please do not use the platform.2. EligibilityTo create an account on TerraVive, you must:Be at least 18 years old or the legal age of majority in your jurisdiction.Provide truthful, current, and complete information during registration.Not create an account on behalf of another person or organization without authorization.Verified foundation and charity accounts must be registered with the appropriate legal authorities in their region.3. User ResponsibilitiesAs a TerraVive user, you are responsible for:Keeping your login credentials secure and confidential.All activity conducted through your account.Ensuring your posts, campaigns, and interactions align with TerraVive’s community standards and environmental mission.Misuse or unauthorized access must be reported to TerraVive immediately.4. Fundraising and Donation FeaturesTerraVive allows users to:Launch and manage fundraisers for environmental causes.Collect and receive donations via integrations with trusted third-party financial apps.Promote campaigns to raise awareness and support for green projects.Important: All fundraisers undergo verification. Fraudulent or deceptive fundraising activities are strictly prohibited and will result in account suspension or legal action.5. Use of DonationsUsers and organizations receiving funds agree to:Use all donations exclusively for the purposes stated in their fundraising campaign.Maintain transparency and provide updates or documentation upon request.Avoid using any portion of the funds for unauthorized or personal purposes.6. Community & Social FeaturesTerraVive includes a social media-like space where users can:Share updates, photos, stories, and achievements.Comment on and support environmental initiatives.Connect with other users, groups, and eco-conscious services.Prohibited Content Includes:Harassment, hate speech, or threats.Inappropriate or misleading content.Advertisements unrelated to environmental causes.TerraVive reserves the right to remove content and restrict user access if community guidelines are violated.7. Account Suspension and TerminationTerraVive may suspend or terminate an account if:These Terms are violated.Fraudulent or deceptive practices are discovered.Donations are misused or not accounted for.8. Third-Party ServicesTerraVive integrates with external financial services for donation collection. By using these features:You acknowledge and accept the terms and privacy policies of those third-party providers.TerraVive is not liable for issues arising from their use.9. Limitation of LiabilityTerraVive is not liable for:Disputes between donors and fundraisers.Mismanagement of donations outside our platform.Indirect or consequential damages resulting from platform use.10. Modifications to TermsThese Terms may be updated from time to time. Continued use of TerraVive after changes indicates your acceptance of the new Terms.11. Contact InformationFor questions, support, or concerns, please reach out to us at support@terravive.org. ]]>
</string>
    <string name="terms_and_conditions">TermsAndConditionsFragment</string>
</resources>